--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
 body { 
-	background-color: navy;
+	background-color: crimson;
+}
+
+li {
+  float: center;
+}
+
+a {
+  display: block;
+  padding: 10px;
+  background-color: darkred;
 }
 
 h1 {
@@ -16,7 +26,3 @@ p {
 	text-align: left;
 	color: gold;
 }
-
-.class
-#id
-*
