--- a/style.css
+++ b/style.css
@@ -2,11 +2,18 @@ body {
 	background-color: crimson;
 }
 
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
 li {
   float: center;
 }
 
-a {
+li a {
   display: block;
   padding: 10px;
   background-color: darkred;
