--- a/style.css
+++ b/style.css
@@ -28,15 +28,18 @@ li a:hover {
 
 h1 {
 	text-align: center;
+	font-family: optima, serif;
 	color: white;
 }
 
 h2 {
 	text-align: center;
+	font-family: optima, serif;
 	color: darkgreen;
 }
 
 p {
 	text-align: left;
+	font-family: helvetica;
 	color: gold;
 }
