--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ li {
 
 li a {
   display: inline-block;
-  max-width: 400px;
+  width: 300px;
   color: white;
   text-align: center;
   text-decoration: none;
