--- a/style.css
+++ b/style.css
@@ -31,6 +31,22 @@ li a {
   background-color: darkred;
 }
 
+.nav{
+    border:2px solid #ffffff;
+    border-width:2px 0;
+    list-style:none;
+    margin:0;
+    padding:0;
+    text-align:center;
+}
+.nav li{
+    display:inline;
+}
+.nav a{
+    display:inline-block;
+    padding:10px;
+}
+
 li a:hover {
 	background-color: green;
 }
