--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body { 
-	background-color: crimson;
+	background-color: darkred;
 }
 
 .serif {
@@ -11,8 +11,8 @@ body {
 }
 
 .nav{
-    border:2px solid darkgreen;
-    border-width:2px 0;
+    border:1px solid white;
+    border-width:5px 0;
     list-style:none;
     margin:0;
     padding:0;
@@ -20,21 +20,20 @@ body {
 }
 .nav li{
     display:inline;
-    color: white;
+    color: forestgreen;
     text-decoration: none;  
 }
 .nav a{
     display:inline-block;
-    padding:15px;
+    padding:7px;
 }
 
 li a:hover {
-	background-color: darkred;
+	background-color: crimson;
 }
 
 h1 {
 	text-align: center;
-	font-family: optima, serif;
 	color: white;
 }
 
