--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@ body {
 	background-color: darkred;
 }
 
+.header {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
 .serif {
 	font-family: Perpetua, Times, serif;
 }
@@ -26,6 +31,8 @@ body {
 .nav a{
     display:inline-block;
     padding:7px;
+    text-decoration: none;
+	color: forestgreen;
 }
 
 li a:hover {
