--- a/style.css
+++ b/style.css
@@ -43,18 +43,21 @@ li a:hover {
 h1 {
 	text-align: center;
 	color: white;
-	padding-bottom: 5px;
+	padding-bottom: 1px;
 }
 
 h2 {
 	text-align: center;
 	color: forestgreen;
-	padding-bottom: 5px;
+	padding-top: 1px;
+	padding-bottom: 1px;
 }
 
 h3 {
 	text-align: center;
 	color: gold;
+	padding-top: 1px;
+	padding-bottom: 1px;
 }
 
 p {
