--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ body {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
+	max-width: 100%;
+	float: left;
+	margin-block-start: 5px;
 }
 .serif {
 	font-family: Perpetua, Times, serif;
