--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ li a:hover {
 h1 {
 	text-align: center;
 	color: white;
-	margin-block-start: 0.5em;
+	margin-block-start: 0.1em;
 	margin-block-end: 0.1em;
 	font-size: 5vw;
 }
@@ -58,9 +58,9 @@ h2 {
 h3 {
 	text-align: center;
 	color: gold;
-	padding-top: 1px;
-	padding-bottom: 1px;
-	font-size: 4vw;
+	margin-block-start: 0.2em;
+	margin-block-end: 0.2em;
+	font-size: 2vw;
 }
 
 p {
