--- a/style.css
+++ b/style.css
@@ -37,8 +37,10 @@ h3 {
 /* IMAGE STYLE */
 .homeimg {
 	max-width: 100%;
-	float: left;
+	margin-left: 0.2em;
 	margin-right: 0.2em;
+	margin-top: 0.2em;
+	margin-bottom: 0.2em;
 }
 /* BOX */
 .goldbox {
