--- a/style.css
+++ b/style.css
@@ -36,9 +36,9 @@ h3 {
 
 /* IMAGE STYLE */
 .homeimg {
-	max-width: 100%;
-	margin-left: 0.2em;
-	margin-right: 0.2em;
+	max-width: 80%;
+	margin-left: auto;
+	margin-right: auto;
 	margin-top: 0.2em;
 	margin-bottom: 0.2em;
 }
