--- a/style.css
+++ b/style.css
@@ -36,11 +36,12 @@ h3 {
 
 /* IMAGE STYLE */
 .homeimg {
-	max-width: 80%;
+	display: block;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 0.2em;
 	margin-bottom: 0.2em;
+	max-width: 100%;
 }
 /* BOX */
 .goldbox {
