--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ h1 {
 h2 {
 	text-align: center;
 	color: forestgreen;
-	text-shadow: 2px 2px 5px gold;
+	text-shadow: 2px 2px 5px black;
 	margin-top: 0.2em;
 	margin-bottom: 0.2em;
 	font-size: 3vw;
@@ -32,7 +32,7 @@ h3 {
 }
 h4 {
 	color: forestgreen
-	text-shadow: 1px 1px 3px gold;
+	text-shadow: 1px 1px 3px black;
 	font-size: 2.5vw;
 	margin-top: 0.5em;
 	margin-bottom: 0.5em;
