--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ h3 {
 	font-size: 2.5vw;
 }
 h4 {
-	color: forestgreen
+	color: forestgreen;
 	text-shadow: 1px 1px 3px black;
 	font-size: 2.5vw;
 	margin-top: 0.5em;
