--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
 body {
 	background-color: darkred;
 	font-family: Helvetica, Arial, sans-serif;
+	font-size: 2vw;
+	color: white;
+	text-align: left;
 }
 p {
 	text-align: left;
