--- a/style.css
+++ b/style.css
@@ -131,3 +131,17 @@ th, td {
 .maptext {
 	line-height: 2.0;
 }
+
+/* PIZZA LINKS */
+.pizzalink a:link, a:visited {
+	background-color: navy;
+	color: white;
+	padding: 10px 10px
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+}
+.pizzalink a:hover, a:active {
+	background-color: black;
+}
+	
