--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ th, td {
 }
 
 /* PIZZA LINKS */
-.pizzalink a:link, a:visited {
+.pizzalink a:link {
 	background-color: navy;
 	color: white;
 	padding: 10px 10px
