--- a/style.css
+++ b/style.css
@@ -42,7 +42,9 @@ h4 {
 .serif {
 	font-family: Perpetua, Times, serif;
 }
-
+.center {
+	text-align: center;
+}
 /* IMAGE STYLE */
 /* Source: https://www.w3schools.com/howto/howto_css_image_center.asp */
 .homeimg {
